# Public

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.Linux.json  CMakePresets.Windows.json  CMakePresets.common.json  CMakePresets.json  Jde.output  LICENSE  README.md  compile_commands_linux-clang-debug-jde.json  jde.code-workspace  jde.win.code-workspace  main.code-workspace  main.win.code-workspace  repos.code-workspace  repos.win.code-workspace  vcpkg.json
apps/AppServer/: AppServer-win.code-workspace  AppServer.code-workspace  CMakeLists.txt  CMakePresets.json  README.md
apps/AppServer/config/: App.Server.jsonnet  app-meta.jsonnet  app.mutation  log-meta.jsonnet  log.mutation
apps/AppServer/scripts/: build-app-server.sh
apps/AppServer/source/: AppStartupAwait.cpp  AppStartupAwait.h  ExternalLogger.cpp  ExternalLogger.h  HttpRequestAwait.cpp  HttpRequestAwait.h  LogData.cpp  WebServer.h  pc.h  usings.h
apps/AppServer/src/: AppServer.json  AppServer.rc  AppStartupAwait.cpp  AppStartupAwait.h  CMakeLists.txt  ExternalLogger.cpp  ExternalLogger.h  HttpRequestAwait.cpp  HttpRequestAwait.h  LocalClient.cpp  LocalClient.h  LogData.cpp  LogData.h  ServerSocketSession.cpp  ServerSocketSession.h  WebServer.cpp  WebServer.h  externals.h  log-meta.json  main.cpp  pc.h  resource.h  usings.h
apps/AppServer/tests/: App.Server.Tests.sln  CMakeLists.txt  ThreadingTest.cpp  externals.h  main.cpp  pc.h
apps/OpcGateway/: CMakeLists.txt  CMakePresets.json  OpcGateway.code-workspace  README.md  opc-gateway-win.code-workspace
apps/OpcGateway/config/: Opc.Gateway.jsonnet  access-opcGateway.mutation  opcGateway-meta.jsonnet
apps/OpcGateway/scripts/: JdeSetup.ps1  JdeUninstall.ps1  build-opcGateway.sh  fetch.sh
apps/OpcGateway/setup/: OpcGatewaySetup.nsi
apps/OpcGateway/src/: AppClient.cpp  AppClient.h  AppServer.cpp  ApplicationServer.cpp  ApplicationServer.h  CMakeLists.txt  CMakePresets.json  GatewayAppClient.cpp  GatewayAppClient.h  GatewaySocketSession.cpp  GatewaySocketSession.h  HttpRequestAwait.cpp  HttpRequestAwait.h  OpcGateway.rc  OpcQLHook.cpp  ServerSocketSession.cpp  ServerSocketSession.h  StartupAwait.cpp  StartupAwait.h  UAClient.cpp  UAClient.h  WebServer.cpp  WebServer.h  main.cpp  opcInternal.cpp  opcInternal.h  pc.h  usings.h
apps/OpcGateway/tests/: AppClientTests.cpp  BrowseTests.cpp  CMakeLists.txt  ClientDBTests.cpp  LogSettingTests.cpp  LogTests.cpp  OpcServerTests.cpp  OpcTests.rc  QLTests.cpp  ServerCnnctnDBTests.cpp  SubscribeTests.cpp  WriteTests.cpp  externals.h  helpers.cpp  helpers.h  main.cpp  pc.h
apps/OpcServer/: CMakeLists.txt  opc.server.code-workspace  opcServer-win.code-workspace
apps/OpcServer/config/: Opc.Server.jsonnet  common-meta.libsonnet  opcServer-meta.jsonnet  tests.mutation
apps/OpcServer/scripts/: build-iot-server.sh
apps/OpcServer/src/: AppServer.cpp  AppServer.h  CMakeLists.txt  CMakePresets.json  OpcServer.rc  OpcServerAppClient.cpp  OpcServerAppClient.h  StartupAwait.cpp  StartupAwait.h  UAAccess.cpp  UAAccess.h  UAConfig.cpp  UAConfig.h  UAServer.cpp  UAServer.h  globals.cpp  globals.h  main.cpp  pc.h  resource.h  startup.cpp  startup.h  usings.h
apps/OpcServer/tests/: AccessTests.cpp  CMakeLists.txt  Opc.Server.Tests.rc  UALoadTests.cpp  main.cpp  pc.h
libs/access/: CMakeLists.txt  access-lib-win.code-workspace  access-lib.code-workspace  access-review.md
libs/access/config/: access-meta.jsonnet  access-ql.jsonnet  access.mutation  release.mutation  test.mutation
libs/access/src/: AccessException.cpp  AccessListener.cpp  AccessListener.h  AccessSettings.h  Authorize.cpp  Authorize.h  CMakeLists.txt  access.cpp  accessInternal.cpp  accessInternal.h  globals.h  pc.h
libs/access/tests/: AccessQL.cpp  AccessQL.h  AclTests.cpp  AuthTests.cpp  AuthorizeTests.cpp  CMakeLists.txt  DBTests.cpp  GroupTests.cpp  build.sh  (+8 more)
libs/crypto/: CMakeLists.txt  Jde.Crypto.sln  crypto-win.code-workspace  pc.h
libs/db/: Await.cpp  CMakeLists.txt  DBException.cpp  DBLog.h  DBQueue.cpp  DBQueue.h  Database.cpp  IDataSource.cpp  Value.cpp  c_api.h  db.cpp
libs/fwk/: CMakeLists.txt  CMakePresets.json  Framework-win.code-workspace  Framework.code-workspace
libs/opc/: CMakeLists.txt  opc-lib.code-workspace  opc-review.md  opc-tests-win.code-workspace
libs/ql/: CMakeLists.txt  FilterQL.cpp  GraphQL.cpp  GraphQL.h  GraphQLHook.cpp  GraphQuery.cpp  GraphQuery.h  Introspection.cpp  LocalQL.cpp  LocalQL.h  LocalSubscriptions.cpp  MutationAwait.cpp  QLAwait.cpp  QLHook.cpp  QLSubscriptions.cpp  SubscriptionAwait.cpp  TableQL.cpp  UnsubscribeAwait.cpp  mutation.cpp  pc.h  ql.cpp
libs/web/: CMakeLists.txt  FromServer.proto  Web.sln  web-lib-win.code-workspace  web.code-workspace
src/appClient/: AppClient.cpp  AppClientSocketSession.cpp  AppClientSocketSession.h  AppLog.cpp  AppLog.h  CMakeLists.txt  SessionGraphQL.cpp  Sessions.cpp  usings.h
src/crypto/: CMakeLists.txt  Crypto.vcxproj  Crypto.vcxproj.filters  CryptoSettings.cpp  OpenSsl.cpp  OpenSslInternal.cpp  OpenSslInternal.h  pc.h
src/http/: CMakeLists.txt  ClientSocketAwait.cpp  ClientStreams.cpp  IClientSocketSession.cpp
src/iot/: CMakeLists.txt  IotGraphQL.cpp  UM.cpp  pc.h
src/um/: CMakeLists.txt  UM.cpp  UMSettings.h
src/web/: CMakeLists.txt  Exports.h  ProtoServer.cpp  ProtoServer.h  RestServer.cpp  RestServer.h  TypeDefs.h  Web.vcxproj  Web.vcxproj._user  Web.vcxproj.filters  WebGraphQL.cpp  WebSocket.cpp  WebSocket.cpp_  WebSocket.h  helpers.h  pc.h
tests/appServer/: CMakeLists.txt  DBTests.cpp  Tests.AppServer.vcxproj  Tests.AppServer.vcxproj.filters  ThreadingTest.cpp  build.sh  main.cpp
tests/iot/: CMakeLists.txt  DBTests.cpp  Iot.Tests.sln  IotTests.vcxproj.filters  OpcServerTests.cpp  OpcUserTests.cpp  OpenSslTests.cpp  externals.h  helpers.cpp  helpers.h  main.cpp
tests/ml/: CMakeLists.txt  ClassificationTests.cpp  build.sh  main.cpp  pc.h
tests/web/: CMakeLists.txt  CertificateTests.cpp  CopyFiles.vcxproj  HttpHandler.h  SocketTests.cpp  TestRequestAwait.cpp  TestRequestAwait.h  WebTests.cpp  WebTests.sln  build.sh  copy.bat  main.cpp  pc.h
(+1961 files in other folders)
