cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
project( Superbuild VERSION ${JDE_VERSION} LANGUAGES CXX )

option( jde_Superbuild "Generate the test targets." ON )
option( jde_TESTS "Generate the test targets." OFF )
option( jde_REPOS "Generate the 3rd party targets." OFF )
option( jde_APP_SERVER "Generate the App Server target." OFF )
option( jde_OPC_SERVER "Generate the OPC Server target." OFF )
option( jde_OPC_GATEWAY "Generate the OPC Gateway target." OFF )

if( jde_REPOS )
	add_subdirectory( build repos )
endif()

if( jde_TESTS )
	enable_testing()
endif()

include( build/functions.cmake )

set( libDir ${CMAKE_CURRENT_SOURCE_DIR}/libs )
add_subdirectory( ${libDir}/fwk/src libs/fwk/lib )
if( jde_TESTS )
	add_subdirectory( libs/fwk/tests libs/fwk/tests )
endif()
add_subdirectory( ${libDir}/db/src libs/db/lib )
if( WIN32 )
	add_subdirectory( ${libDir}/db/drivers/odbc libs/db/drivers/odbc )
else()
	add_subdirectory( ${libDir}/db/drivers/mysql libs/db/drivers/mysql )
endif()
add_subdirectory( ${libDir}/ql libs/ql )
add_subdirectory( ${libDir}/access/src libs/access/lib )
if( jde_TESTS )
	add_subdirectory( libs/access/tests libs/access/tests )
endif()
add_subdirectory( ${libDir}/web/client libs/web/client )
add_subdirectory( ${libDir}/web/server libs/web/server )
if( jde_TESTS )
	add_subdirectory( libs/web/tests libs/web/tests )
endif()
add_subdirectory( ${libDir}/app/shared libs/app/shared )
add_subdirectory( ${libDir}/app/client libs/app/client )
add_subdirectory( ${libDir}/opc/src libs/opc )

set( appDir ${CMAKE_CURRENT_SOURCE_DIR}/apps )
if( jde_APP_SERVER OR (jde_OPC_GATEWAY AND jde_TESTS) )
	add_subdirectory( ${appDir}/AppServer/src apps/AppServer/lib )
endif()

if( jde_OPC_SERVER OR (jde_OPC_GATEWAY AND jde_TESTS) )
	message( "Adding OpcServer lib" )
	add_subdirectory( ${appDir}/OpcServer/src apps/OpcServer/lib )
endif()

if( jde_APP_SERVER )
	# if( jde_TESTS )
	# 	add_subdirectory( apps/AppServer/tests apps/AppServer/tests )
	# endif()
	add_subdirectory( apps/AppServer apps/AppServer/exe )
endif()
if( jde_OPC_SERVER )
	if( jde_TESTS )
		add_subdirectory( apps/OpcServer/tests apps/OpcServer/tests )
	endif()
	add_subdirectory( apps/OpcServer apps/OpcServer/exe )
endif()
if( jde_OPC_GATEWAY )
	if( jde_TESTS )
		add_subdirectory( apps/OpcGateway/tests apps/OpcGateway/tests )
	endif()
	add_subdirectory( apps/OpcGateway/src apps/OpcGateway/lib )
	add_subdirectory( apps/OpcGateway apps/OpcGateway/exe )
endif()
