cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
project( Superbuild VERSION ${JDE_VERSION} LANGUAGES CXX )

option( jde_Superbuild "Generate the test targets." ON )
option( jde_REPOS "Generate the 3rd party targets." ON )
option( jde_TESTS "Generate the test targets." ON )
option( jde_APPS "Generate the App Server target." ON )

if( jde_REPOS )
	add_subdirectory( build repos )
endif()

if( jde_APPS )
	include( build/functions.cmake )

	set( libDir ${CMAKE_CURRENT_SOURCE_DIR}/libs )
	add_subdirectory( ${libDir}/fwk/src libs/fwk/lib )
	add_subdirectory( ${libDir}/db/src libs/db/lib )
	if( WIN32 )
		add_subdirectory( ${libDir}/db/drivers/odbc libs/db/drivers/odbc )
	else()
		add_subdirectory( ${libDir}/db/drivers/mysql libs/db/drivers/mysql )
	endif()
	add_subdirectory( ${libDir}/ql libs/ql )
	add_subdirectory( ${libDir}/access/src libs/access/lib )
	add_subdirectory( ${libDir}/web/client libs/web/client )
	add_subdirectory( ${libDir}/web/server libs/web/server )
	add_subdirectory( ${libDir}/app/shared libs/app/shared )
	add_subdirectory( ${libDir}/app/client libs/app/client )
	add_subdirectory( ${libDir}/opc/src libs/opc )

	add_subdirectory( apps/AppServer/src apps/AppServer/lib )
	add_subdirectory( apps/OpcServer/src apps/OpcServer/lib )
	add_subdirectory( apps/OpcGateway/src apps/OpcGateway/lib )
	if( jde_TESTS )
		enable_testing()
		add_subdirectory( libs/fwk/tests libs/fwk/tests )
		add_subdirectory( libs/access/tests libs/access/tests )
		add_subdirectory( libs/web/tests libs/web/tests )
	 	add_subdirectory( apps/AppServer/tests apps/AppServer/tests )
		add_subdirectory( apps/OpcServer/tests apps/OpcServer/tests )
		add_subdirectory( apps/OpcGateway/tests apps/OpcGateway/tests )
	endif()
	add_subdirectory( apps/AppServer apps/AppServer/exe )
	add_subdirectory( apps/OpcServer apps/OpcServer/exe )
	add_subdirectory( apps/OpcGateway apps/OpcGateway/exe )
endif()
