cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )

include( $ENV{JDE_BASH}/Public/build/functions.cmake )
message( "Jde.Opc.Gateway" )
project( Jde.Opc.Gateway VERSION ${JDE_VERSION} LANGUAGES CXX )
include( ../../build/dependencies.cmake )
if( WIN32 )
	set( OPENSSL_USE_STATIC_LIBS ON )
endif()
find_package( OpenSSL REQUIRED )

find_package( open62541 REQUIRED )
set( open62541Dir ${open62541_DIR}/../../.. )
cmake_path( ABSOLUTE_PATH open62541Dir NORMALIZE OUTPUT_VARIABLE open62541Dir )
if( WIN32 )
	add_definitions( -DZLIB_USE_STATIC_LIBS -D )
	set( ZLIB_ROOT ${LIB_DIR}/zlib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		link_directories( ${JSONNET_DIR}/lib )
	endif()
endif()
find_package( ZLIB REQUIRED )

if( NOT jde_Superbuild )
	set( libDir $ENV{JDE_BASH}/Public/libs )
	add_subdirectory( ${libDir}/fwk/src ../../libs/fwk/lib )
	add_subdirectory( ${libDir}/db/src ../../libs/db/lib )
	if( WIN32 )
		add_subdirectory( ${libDir}/db/drivers/odbc ../../libs/db/drivers/odbc )
	else()
		add_subdirectory( ${libDir}/db/drivers/mysql ../../libs/db/drivers/mysql )
	endif()
	add_subdirectory( ${libDir}/ql ../../libs/ql )
	add_subdirectory( ${libDir}/access/src ../../libs/access/lib )
	add_subdirectory( ${libDir}/web/client ../../libs/web/client )
	add_subdirectory( ${libDir}/web/server ../../libs/web/server )
	add_subdirectory( ${libDir}/app/shared ../../libs/app/shared )
	add_subdirectory( ${libDir}/app/client ../../libs/app/client )
	add_subdirectory( ${libDir}/opc/src ../../libs/opc )
	add_subdirectory( src lib )

	if( jde_BUILD_TESTS )
		enable_testing()
		add_subdirectory( tests )
	endif()
endif()

set( targetName Jde.Opc.Gateway )
project( ${targetName} )

#message( ${JSONNET_DIR}/lib )
#link_directories( ${JSONNET_DIR}/lib )
link_directories( ${open62541Dir}/lib )
#add_definitions( -DUA_ENABLE_ENCRYPTION )

add_executable( ${targetName} )
compileOptions( ${targetName} )
file( GLOB sources *.cpp src/main.cpp )
file( GLOB headers *.h )
if( WIN32)
	list( APPEND sources src/OpcGateway.rc )
	set_target_properties( ${targetName} PROPERTIES LINK_FLAGS ${CMAKE_EXE_LINKER_FLAGS} )
endif()
target_sources( ${targetName} PRIVATE ${sources} ${resources} ${headers} )

if( WIN32 )
#	target_link_libraries( ${targetName} ZLIB::ZLIB )
	target_link_libraries( ${targetName} Iphlpapi.lib )
else()
	target_link_libraries( ${targetName} stdc++exp )
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		target_link_libraries( ${targetName} libjsonnet++.so libjsonnet.so )
	endif()
endif()
target_link_libraries( ${targetName} OpenSSL::SSL )
#include_directories( ${open62541Dir}include )
target_link_libraries( ${targetName} Boost::json )
target_link_libraries( ${targetName} Jde.Opc.GatewayLib )

add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E create_symlink "$ENV{JDE_BASH}/Public/libs/db/config/common-meta.libsonnet" "${CMAKE_CURRENT_SOURCE_DIR}/config/common-meta.libsonnet" COMMENT "mklink common-meta.libsonnet" )
if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "-c -tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Gateway.jsonnet" )
	copyCommonDlls()
endif()