cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
enable_testing()
include( ../../build/functions.cmake )
project( Jde.Opc.Server VERSION ${JDE_VERSION} LANGUAGES CXX )

if( NOT jde_Superbuild )
	add_subdirectory( $ENV{JDE_DIR}/libs/fwk/src ../../libs/fwk/lib )
	set( opcCommonDir ../../libs/opc  )
	add_subdirectory( ${opcCommonDir}/src ../../libs/opc/lib )
	add_subdirectory( $ENV{JDE_DIR}/libs/db/src ../../libs/db/lib )
	if( WIN32 )
		add_subdirectory( $ENV{JDE_DIR}/libs/db/drivers/odbc ../../libs/db/drivers/odbc )
	else()
		add_subdirectory( $ENV{JDE_DIR}/libs/db/drivers/mysql ../../libs/db/drivers/mysql )
	endif()
	add_subdirectory( $ENV{JDE_DIR}/libs/ql ../../libs/ql )
	add_subdirectory( $ENV{JDE_DIR}/libs/access/src ../../libs/access/lib )
	add_subdirectory( $ENV{JDE_DIR}/libs/web/server ../../libs/web/server )
	add_subdirectory( $ENV{JDE_DIR}/libs/web/client ../../libs/web/client )
	add_subdirectory( $ENV{JDE_DIR}/libs/app/shared ../../libs/app/shared )
	add_subdirectory( $ENV{JDE_DIR}/libs/app/client ../../libs/app/client )
	add_subdirectory( src lib )
	if( jde_BUILD_TESTS )
		add_subdirectory( tests )
	endif()
endif()
find_package( open62541 REQUIRED )
set( open62541Dir ${open62541_DIR}/../../.. )
cmake_path( ABSOLUTE_PATH open62541Dir NORMALIZE OUTPUT_VARIABLE open62541Dir )
link_directories( ${open62541Dir}/lib )
#add_definitions( -DUA_ENABLE_ENCRYPTION_OPENSSL )
include_directories( ${open62541Dir}/include )

if( WIN32 )
	add_definitions( -DZLIB_USE_STATIC_LIBS -D )
	set( ZLIB_ROOT ${LIB_ROOT}/zlib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		link_directories( ${JSONNET_DIR}/lib )
	endif()
endif()
find_package( ZLIB REQUIRED )

include( ../../build/dependencies.cmake )
set( targetName Jde.Opc.Server )
project( ${targetName} )

add_executable( ${targetName} )
compileOptions( ${targetName} )

set( sources src/main.cpp )
if( WIN32 )
	list( APPEND sources src/OpcServer.rc )
	set_target_properties( ${targetName} PROPERTIES LINK_FLAGS ${CMAKE_EXE_LINKER_FLAGS} )
endif()
file( GLOB headers src/**/*.h )
target_sources( ${targetName} PRIVATE ${sources} ${headers} )

if( WIN32 )
	target_link_libraries( ${targetName} Iphlpapi.lib )
else()
	target_link_libraries( ${targetName} OpenSSL::SSL )
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		target_link_libraries( ${targetName} libjsonnet++.so libjsonnet.so )
	endif()
endif()
if( Boost_USE_STATIC_LIBS )
	target_link_libraries( ${targetName} Boost::json )
endif()
target_link_libraries( ${targetName} protobuf::libprotobuf )
target_link_libraries( ${targetName} Jde Jde.DB Jde.QL Jde.Access Jde.Web.Server Jde.App.Client Jde.Opc Jde.Opc.ServerLib )

#add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E create_symlink "../../libs/db/config/common-meta.libsonnet" "config/common-meta.libsonnet" COMMENT "mklink common-meta.libsonnet" )
if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "-c -tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Server.jsonnet" )
	copyCommonDlls()
	add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MULTI_INSTALL_PREFIX}/libxml2/bin/libxml2d.dll" $<TARGET_FILE_DIR:${targetName}>  COMMENT "libxml2d.dll" )
endif()
