cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
enable_testing()
include( ${CMAKE_CURRENT_LIST_DIR}/../../build/functions.cmake )
project( Jde.Opc.Server VERSION ${JDE_VERSION} LANGUAGES CXX )

if( NOT jde_Superbuild )
	add_subdirectory( config/sql/sqlite )
	add_subdirectory( ${jdeRoot}/libs/fwk/src ../../libs/fwk/lib )
	set( opcCommonDir ${jdeRoot}/libs/opc )
	add_subdirectory( ${opcCommonDir}/src ../../libs/opc/lib )
	add_subdirectory( ${jdeRoot}/libs/db/src ../../libs/db/lib )
	add_subdirectory( ${jdeRoot}/libs/db/drivers/sqlite/src ../../libs/db/drivers/sqlite/lib ) #the config/sql/sqlite MODULE above is only reachable through this driver
	if( WIN32 )
		add_subdirectory( ${jdeRoot}/libs/db/drivers/odbc ../../libs/db/drivers/odbc )
	else()
		add_subdirectory( ${jdeRoot}/libs/db/drivers/mysql ../../libs/db/drivers/mysql )
	endif()
	add_subdirectory( ${jdeRoot}/libs/ql ../../libs/ql )
	add_subdirectory( ${jdeRoot}/libs/access/src ../../libs/access/lib )
	add_subdirectory( ${jdeRoot}/libs/web/server ../../libs/web/server )
	add_subdirectory( ${jdeRoot}/libs/web/client ../../libs/web/client )
	add_subdirectory( ${jdeRoot}/libs/app/shared ../../libs/app/shared )
	add_subdirectory( ${jdeRoot}/libs/app/client ../../libs/app/client )
	add_subdirectory( src lib )
	if( jde_TESTS )
		add_subdirectory( tests )
	endif()
endif()
find_package( open62541 REQUIRED )
#add_definitions( -DUA_ENABLE_ENCRYPTION_OPENSSL )

if( WIN32 )
	add_definitions( -DZLIB_USE_STATIC_LIBS )
	set( ZLIB_ROOT ${CMAKE_INSTALL_PREFIX}/zlib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		link_directories( ${JSONNET_DIR}/lib )
	endif()
endif()
find_package( ZLIB REQUIRED )

include( ${jdeRoot}/build/dependencies.cmake )
set( targetName Jde.Opc.Server )

add_executable( ${targetName} )
compileOptions( ${targetName} )

set( sources src/main.cpp )
if( WIN32 )
	list( APPEND sources src/OpcServer.rc )
endif()
file( GLOB headers src/*/*.h )
target_sources( ${targetName} PRIVATE ${sources} ${headers} )

if( WIN32 )
	target_link_libraries( ${targetName} Iphlpapi.lib )
else()
	target_link_libraries( ${targetName} OpenSSL::SSL )
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		target_link_libraries( ${targetName} libjsonnet++.so libjsonnet.so )
	endif()
endif()
target_link_libraries( ${targetName} Jde Jde.DB Jde.QL Jde.Access Jde.Web.Server Jde.App.Client Jde.Opc Jde.Opc.ServerLib )
if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "-c -tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Server.jsonnet" )
	copyCommonDlls()
	add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_INSTALL_PREFIX}/libxml2/bin/libxml2.dll" $<TARGET_FILE_DIR:${targetName}>  COMMENT "libxml2.dll" )
endif()
