cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
enable_testing()
include( ../../build/functions.cmake )
project( Jde.Access VERSION ${JDE_VERSION} LANGUAGES CXX )

add_subdirectory( $ENV{JDE_DIR}/Framework/source framework )
add_subdirectory( ../db/src db/framework )
add_subdirectory( ../db/drivers/mysql db/drivers/mysql )
add_subdirectory( ../ql ql )
add_subdirectory( src access )
if( buildTests OR CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
	add_subdirectory( tests tests )
	set( CMAKE_CTEST_ARGUMENTS -c -settings=$ENV{JDE_DIR}/Public/libs/access/tests/config/Access.Tests.jsonnet )
	add_test( NAME AccessTests COMMAND $<TARGET_FILE:Jde.Access.Tests> )
endif()
