cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
enable_testing()
include( ../../build/functions.cmake )
project( Jde.Access VERSION ${JDE_VERSION} LANGUAGES CXX )

#add_subdirectory( ../fwk/src ../fwk/lib )
add_subdirectory( src lib )
if( jde_BUILD_TESTS OR CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
	# if( WIN32 )
	# 	add_subdirectory( ../db/drivers/odbc ../db/drivers/odbc )
	# else()
	# 	add_subdirectory( ../db/drivers/mysql ../db/drivers/mysql )
	# endif()
	add_subdirectory( tests tests )
endif()