cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
include( ../../build/functions.cmake )
message( Jde.Opc.Lib )
project( Jde.Opc.Lib VERSION ${JDE_VERSION} LANGUAGES CXX )

add_subdirectory( $ENV{JDE_DIR}/Framework/source ../framework )
if( WIN32 )
	add_subdirectory( ../db/drivers/odbc ../db/drivers/odbc )
else()
	add_subdirectory( ../db/drivers/mysql ../db/drivers/mysql )
endif()
add_subdirectory( src lib )
if( buildTests OR CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
	add_subdirectory( tests )
endif()